--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "redux": "^4.0.5",
-        "redux-thunk": "^2.3.0"
+        "redux-thunk": "^2.3.0",
+        "@material-ui/lab": "^4.0.0-alpha.56",
     },
     "scripts": {
         "start": "react-scripts start",
