--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "whisper-it",
   "version": "1.0.0",
   "description": "Worlds Smallest Social Media Site",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
     "start": "node server.js",
