--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,7 @@
         "react-scripts": "3.4.3",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
-        "@material-ui/lab": "^4.0.0-alpha.56",
+        "@material-ui/lab": "^4.0.0-alpha.56"
     },
     "scripts": {
         "start": "react-scripts start",
