--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.4"
+    "mongoose": "^5.10.4",
+    "redux-devtools-extension": "^2.13.8"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
